Bug 67287 - igt/gem_flink_race fails
Summary: igt/gem_flink_race fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Daniel Vetter
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-25 03:02 UTC by lu hua
Modified: 2017-10-06 14:44 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (82.85 KB, text/plain)
2013-07-25 03:02 UTC, lu hua
no flags Details

Description lu hua 2013-07-25 03:02:46 UTC
Created attachment 82974 [details]
dmesg

System Environment:
--------------------------
Platform:  PNV/ILK/SNB/IVB/HSW
Kernel:    (drm-intel-nightly)ae5779ebae3a73ca4d18118a4b8600e4a36aaea7

Bug detailed description:
-------------------------
It fails on all platforms: PNV/ILK/SNB/IVB/HSW.It happens on drm-intel-nightly, drm-intel-next-queued, drm-intel-fixes kernel.
It's a new igt case.

output:
leaked 1 objects

Reproduce steps:
----------------------------
1. ./gem_flink_race
Comment 1 Daniel Vetter 2013-07-25 08:56:42 UTC
The first bug here is that the object accounting is broken, that's fixed now with:

commit 896bfe0ae90a42e2226fba4948c0f353f9c9c6c3
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Wed Jul 24 22:40:23 2013 +0200

    drm/i915: fix the racy object accounting

But meanwhile I've updated the gem_flink_race test a bit (now with 2 subtests), and those two are still broken. They require prime fixes in drm core. I have the patches, but they are not yet merged.
Comment 2 Daniel Vetter 2013-09-16 06:06:48 UTC
Ok, prime fixes have now landed, this should work.
Comment 3 lu hua 2013-09-16 07:17:07 UTC
Verified.Fixed.
Comment 4 Elizabeth 2017-10-06 14:44:50 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.